<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_btn_neutral"
        style="@style/dialog_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/color_panel_text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/dialog_btn_positive"
        android:text="@string/color_panel_ok"
        android:textColor="@color/colorPanelDarkBlue"
        android:visibility="gone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/dialog_btn" />

    <TextView
        android:id="@+id/dialog_btn_negative"
        android:text="@string/color_panel_cancel"
        android:textColor="@color/colorPanelAccent"
        android:visibility="gone"
        android:layout_toLeftOf="@id/dialog_btn_positive"
        android:layout_toStartOf="@id/dialog_btn_positive"
        style="@style/dialog_btn" />
</RelativeLayout>